12955
The Java code below
```scala
public class test {
    public static void main(String[] args) {
       long x = 600L;
       x *= 0.9;
       System.out.println(x);
    }
}
```
prints the result `540` while compiling the corresponding Scala code
```scala
object test extends Application {
  var x: Long = 600L
  x *= 0.9
  println(x)
}
```
generates the following error
```scala
test.scala:3: error: value *= is not a member of Long
  x *= 0.9
    ^
one error found
```
